# Electron-SDK

./: .appveyor.yml  .clang-format  .env  .eslintignore  .eslintrc  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .npmignore  .npmrc  .prebuildrc  .prettierignore  .travis.yml  .yarnrc  API doc.md  CHANGELOG.md  CMakeLists.txt  Jenkinsfile_bitbucket.groovy  LIMITATIONS.md  README.MD  README.md  README.zh.md  VideoSource_1650342570500  agora_node_ext.md  agora_node_ext_1650342570473.node  apis.md  appveyor.yml  binding.gyp  build.bat  build.sh  build_debug.sh  build_example.sh  common.md  contribuitions.md  copy.sh  dtsconfig.json  electron-sdk-build-mac-release.sh  electron-sdk-build-win32-release.bat  electron-sdk-build-win64-release.bat  (+22 more)
.github/workflows/: build.yml  ci.yml  dep.yml  doc.yml  gitleaks.yml  publish.yml  sync.yml  terra.yml
.history/: just-task_20201201125609.js  package_20201126225312.json  package_20201201125141.json  package_20201202172945.json  package_20201202173006.json  package_20201214144637.json  package_20201214213315.json
.history/agora_node_ext/: agora_rtc_engine_20201110111709.cpp  agora_rtc_engine_20201110111709.h  agora_rtc_engine_20201110112812.h  (+72 more)
__tests__/: index.api.js
agora_node_ext/: agora_media_player.cpp  agora_media_player.h  agora_meida_player.h  agora_node_ext.cpp  agora_node_ext.h  agora_rtc_channel_publish_helper.h  agora_rtc_engine.cpp  agora_rtc_engine.h  agora_video_source.cpp  agora_video_source.h  check_permission.cpp  check_permission.h  decode_data.cpp  decode_data.hpp  ipc_manager.cpp  ipc_manager.hpp  node_async_queue.cpp  node_async_queue.h  node_channel_event_handler.cpp  node_channel_event_handler.h  node_event_handler copy.cpp  node_event_handler copy.h  node_event_handler.cpp  node_event_handler.h  node_media_player_audio_frame_observer.cpp  node_media_player_audio_frame_observer.h  node_media_player_observer.cpp  node_media_player_observer.h  node_media_player_video_frame_observer.cpp  node_media_player_video_frame_observer.h  node_metadata_observer.cpp  node_metadata_observer.h  node_napi_api.cpp  node_napi_api.h  node_screen_window_info.h  node_screen_window_info_mac.cpp  node_screen_window_info_win.cpp  node_uid.cpp  node_uid.h  node_video_encoded_image_receiver.cpp  (+9 more)
ci/: .npmrc_x32  .npmrc_x64  electron-sdk-build-linux-release.sh  electron-sdk-build-mac-release.sh  electron-sdk-build-windows-release.bat  packager-linux.sh  packager-mac.sh  packager-win.ps1
cn/: CHANGELOG.md  README.zh.md  electron-sdk-build-mac-release.sh  index.md  jest.config.js  package.json  tslint.json
common/: ipc_shm.h  log_helper.cpp  log_helper.h  loguru.cpp  loguru.hpp  node_error.h  node_event.cpp  node_event.h  node_log.cpp  node_log.h  node_process.h  node_process_unix.cpp  node_process_win.cpp  video_source_ipc.cpp  video_source_ipc.h  windows_system_api.cpp  windows_system_api.h
configs/: binding32.gyp  binding64.gyp
docs/: apis.md  common.md  contribuitions.md  globals.html  index.html  video_source.md
example/: .eslintrc.js  .gitignore  .npmrc  .yarnclean  README.md  agoraAddonlog.txt  agora_log.txt  electron-webpack.json  package-lock.json  package.json  rtmpagorartc.log.pid  testLog.txt  tsconfig.json  webpack.renderer.additions.js
js/: AgoraRender.js  AgoraSdk.js  AgoraSdk.ts  Renderer.js  start.bat
patches/: eslint+8.23.1.patch  eslint+8.39.0.patch  eslint-plugin-auto-import+0.1.1.patch  prebuild+11.0.4.patch  yuv-canvas+1.2.6.patch
plugins/XMagicBeautyPlugin/: CMakeLists.txt  build.bat
plugins/XMagicBeautyPlugin/cmake/: download.cmake
plugins/XMagicBeautyPlugin/src/include/: AVFramePluginBase.h  AVFramePluginImpl.cpp  AVFramePluginImpl.h
plugins/XMagicBeautyPlugin/src/win/: plugin.cpp
resources/: VideoSource.rc  resource.h
scripts/: addFile.js  build.js  build.ts  buildJS.js  checkElectron.js  clean.js  cleanup.js  constant.js  constant.ts  debug.js  dowmloadPrebuild.js  download.js  download.ts  downloadPrebuild.js  gen.js  genOS.js  get-cwd.js  getArgvFromPkgJson.js  getConfig.js  install.js  jsapi.js  jsapi.ts  lipo.js  logger.js  npm_argv.js  preinstall.js  remove-arch.sh  rename_sdk.bat  switch_arch.js  synclib.js  util.js  utils.js  utils.ts  zipBuild.js
source_code/iris/: CMakeLists.txt  README.md
source_code/iris/ci/: build.bat  build.py  build.sh  to-framework.sh
source_code/iris/rtc/ci/: build-android.sh  build-ios.sh  build-mac.sh  build-windows.bat  prepare.bat  prepare.sh
source_code/iris/rtc/cxx/: CMakeLists.txt
source_code/iris/rtc/cxx/include/internal/: iris_rtc_json_decoder.h  iris_rtc_json_encoder.h  iris_rtc_struct_extensions.h  iris_rtc_tester.h  rtc_channel_event_handler.h  rtc_engine_event_handler.h  rtc_metadata_observer.h
source_code/iris/rtc/cxx/src/: iris_rtc_c_api.cc  iris_rtc_channel.cc  iris_rtc_device_manager.cc  iris_rtc_engine.cc  iris_rtc_raw_data.cc  iris_rtc_raw_data_plugin_manager.cc  iris_rtc_renderer.cc
source_code/iris/rtc/cxx/src/internal/: iris_rtc_json_decoder.cc  iris_rtc_json_encoder.cc  iris_rtc_struct_extensions.cc  iris_rtc_tester.cc  rtc_channel_event_handler.cc  rtc_engine_event_handler.cc  rtc_metadata_observer.cc
source_code/iris/rtc/cxx/test/: iris_rtc_channel_test.cc  iris_rtc_device_manager_test.cc  iris_rtc_engine_test.cc  iris_rtc_json_test.cc  main.cpp
source_code/iris/rtc/cxx/test/case/: AudioDeviceApiTest.json  ChannelApiTest.json  ChannelEventTest.json  EngineApiTest.json  EngineEventTest.json  VideoDeviceApiTest.json
source_code/iris/rtc/web/: .gitignore  package.json  tsconfig.json  webpack.config.js
source_code/iris/rtc/web/src/: iris.ts  types.native.ts
ts/: AgoraRtcEngine.ts  AgoraSdk.ts  Types.ts  Utils.ts  index.ts  types.ts
video_source/: main_mac.mm  main_win.cpp  video_source.cpp  video_source.h  video_source_event_handler.cpp  video_source_event_handler.h  video_source_param_parser.cpp  video_source_param_parser.h  video_source_render.cpp  video_source_render.h  video_source_transporter.cpp  video_source_transporter.h
wayang/: package-lock.json  package.json  webpack.renderer.additions.js
(+620 files in other folders)
